created all the HTML for the 3 pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,79 @@
     <link rel='stylesheet' href = 'styles/style.css'>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
+        <h1>Captured</h1>
+    </header>
+
+    <section>
+        <h2>WHAT IS CAPTURED</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculus at, consectetur vel turpis. Vestibulum ultricies, felis in lacinia porttitor, tortor metus convallis augue, at fermentum diam erat nec quam. Nulla facilisi. </p>
+
+        <button>FIND OUT MORE</button>
+    </section>
+    
+    <section>
+        <h2>UNLOCK YOUR SKILLS</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculus at, consectetur vel turpis</p>
+        <button>READ MORE</button>
+    </section>
+
+
+    <section>
+        <h2>GETTING NEW GEAR</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculus at, consectetur vel turpis</p>
+        <button>READ MORE</button>
+    </section>
+
+    <section>
+        <div>
+            <i></i>
+            <h2>TOP PICKS</h2>
+            <p>Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
+        </div>
+        <div>
+            <i></i>
+            <h2>TOP PICKS</h2>
+            <p>Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
+        </div>
+        <div>
+            <i></i>
+            <h2>TOP PICKS</h2>
+            <p>Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
+        </div>
+        <div>
+            <i></i>
+            <h2>TOP PICKS</h2>
+            <p>Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
+        </div>
+    </section>
+
+    <section>
+        <img src = '' alt = 'Picture of a map with a camera, a pencil, a notebook and a bag on top.'>
+
+    </section>
+
+    <section>
+        <img src ='' alt ='Picture of a man sitting on top of a rock holding a camera while gazing upon the mountain in front of him'>
+
+        <h2>THIS MONTH PROFILE</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipsicing elit. Nulla pulvinar tortor nulla elementum eleifend. vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus nulla pulvinar tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla ementum eleifend. Vestibulm consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convalis.</p>
+    </section>]
+    <section>
+        <img src="" alt="Picture of the back of a camera showing a black screen">
+        <img src="" alt=" Picture of the front of a camera sitting in some plants">
+        <img src="" alt="Picture from a top angle of the front of a Nikon camera">
+    </section>
+    <footer>
+        <p>Copyright 2018 HackerYou</p>
+    </footer>
 </body>
 </html>
