added asset folder and worked on a bit of the scss for the home page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
+        <nav >
+            <ul class= 'container'>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">BLOG</a></li>
