Worked on scss for the home page

--- a/index.html
+++ b/index.html
@@ -8,36 +8,52 @@
     <link rel='stylesheet' href = 'styles/style.css'>
 </head>
 <body>
-    <header>
-        <nav >
-            <ul class= 'container'>
+    <header class = 'container'>
+        <nav>
+            <ul class= 'navContainer'>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
-        <h1>Captured</h1>
+        <div class= 'imgContainerabs'>
+            <img src="assets/header-box-image.jpg" alt="">
+        </div>
+        <h1 class = 'homeH1'>Captured</h1>
     </header>
 
-    <section>
-        <h2>WHAT IS CAPTURED</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculus at, consectetur vel turpis. Vestibulum ultricies, felis in lacinia porttitor, tortor metus convallis augue, at fermentum diam erat nec quam. Nulla facilisi. </p>
-
-        <button>FIND OUT MORE</button>
+    <section class= 'capturedSection'>
+        <div class = ' textContainer container2'>
+            <h2>WHAT IS CAPTURED</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculus at, consectetur vel turpis. Vestibulum ultricies, felis in lacinia porttitor, tortor metus convallis augue, at fermentum diam erat nec quam. Nulla facilisi. </p>
+            <button>FIND OUT MORE</button>
+        </div>
     </section>
     
-    <section>
-        <h2>UNLOCK YOUR SKILLS</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculus at, consectetur vel turpis</p>
-        <button>READ MORE</button>
+    <section class = 'skillSection container3'>
+        <div class = 'imgContainer'>
+            <img src="assets/left-image.jpg" alt="">
+        </div>
+        <div class = 'textContainer'>
+
+            <h2>UNLOCK YOUR SKILLS</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculus at, consectetur vel turpis</p>
+            <button>READ MORE</button>
+        </div>
+        
     </section>
 
 
-    <section>
-        <h2>GETTING NEW GEAR</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculus at, consectetur vel turpis</p>
-        <button>READ MORE</button>
+    <section class = 'gearSection container3 reverse'>
+        <div class = 'imgContainer'>
+            <img src="assets/right-image.jpg" alt="">
+        </div>
+        <div class = 'textContainer'> 
+            <h2>GETTING NEW GEAR</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculus at, consectetur vel turpis</p>
+            <button>READ MORE</button>
+        </div>
     </section>
 
     <section>
