Finished some more SASS styling and did the media queries for the home page

--- a/blogPost.html
+++ b/blogPost.html
@@ -35,7 +35,7 @@
             </div>
             <div class="textContainerSide">
                 <h3>ABOUT CAPTURED</h3>
-                <p>Nam dapibus nisi vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum. <span>Find out more.</span></p>
+                <p>Nam dapibus nisi vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum. <span class='bold'>Find out more.</span></p>
 
                 <h3>RECENT POSTS</h3>
                 <ul>
