--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class = 'container6'>
                 <div class="iconContainer">
 
-                    <i class="fas fa-camera"></i>
+                    <i aria-label="Camera icon" class="fas fa-camera icon1"></i>
                 </div>
                 <div>
                     <h3>TOP PICKS</h3>
@@ -77,7 +77,7 @@
             <div class = 'container6'>
                 <div class="iconContainer">
 
-                    <i class="fas fa-users"></i>
+                    <i aria-label="Community icon" class="fas fa-users icon2"></i>
                 </div>
                 <div>
                     <h3>COMMUNITY</h3>
@@ -87,7 +87,7 @@
             <div class = 'container6'>
                 <div class="iconContainer">
 
-                    <i class="fas fa-file"></i>
+                    <i aria-label="file icon" class="fas fa-file icon3"></i>
                 </div>
                 <div>
                     <h3>BLOG</h3>
@@ -97,7 +97,7 @@
             <div class = 'container6'>
                 <div class="iconContainer">
 
-                    <i class="fas fa-phone"></i>
+                    <i aria-label="telephone icon" class="fas fa-phone icon4"></i>
                 </div>
                 <div>
                     <h3>GET IN TOUCH</h3>
@@ -135,7 +135,7 @@
             <div class="imgContainer">
                 <img src="assets/gallery-image-2.jpg" alt=" Picture of the front of a camera sitting in some plants">
             </div>
-            <div class="imgContainer">
+            <div class="imgContainer image3">
                 <img src="assets/gallery-image-3.jpg" alt="Picture from a top angle of the front of a Nikon camera">
             </div>
         </div>
