finished  the drop-down menu and media queries. Fixed some more SASS

--- a/blogPost.html
+++ b/blogPost.html
@@ -23,6 +23,18 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
+
+        <nav class = 'dropDownMenu'>
+            <input type="checkbox" id="menu">
+            <label for="menu" class="fas fa-bars"></label>
+            <ul class= menuContent>
+                <li><a  href="index.html">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a class ='underline' href="blogPost.html">BLOG</a></li>
+                <li><a  href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
+
         <h1>BLOG</h1>
         <div class= 'imgContainerBlogAbs'>
             <img src="assets/blog-post-image.jpg" alt="">
@@ -66,7 +78,7 @@
                 <div class="imgContainer">
                     <img src="assets/comment-1.jpg" alt="Face of a man wearing a hat">
                 </div>
-                <div class= 'textContainer'> 
+                <div class= 'textContainerComment'> 
                     <p>Tuesday October 9th, 2018 by Jeremy</p>          
                     <p>Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcorpor metus. Sed sollicitudin ipsum quis nunc sollicitudin ultrices. donec euismod scelerisque ligula. Maecenas eu varius risus, eu aliquet arcu</p>
                 </div>
@@ -79,7 +91,7 @@
                 <div class="imgContainer">
                     <img src="assets/comment-2.jpg" alt="Face of a man wearing a hat">
                 </div>
-                <div class = 'textContainer'>           
+                <div class = 'textContainerComment'>           
                     <p>Wednesday October 10th, 2018 by Julia</p>
                     <p>Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcorpor metus. Sed sollicitudin ipsum quis nunc sollicitudin ultrices. donec euismod scelerisque ligula. Maecenas eu varius risus, eu aliquet arcu</p>
                 </div>
