--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
                 <li><a href="blogPost.html">BLOG</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
+
+            
+        </nav>
+        <nav class = 'dropDownMenu'>
+            <input type="checkbox" id="menu">
+            <label for="menu" class="fas fa-bars"></label>
+            <ul class= menuContent>
+                <li><a class ='underline' href="index.html">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="blogPost.html">BLOG</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
         </nav>
         <div class= 'imgContainerabs'>
             <img src="assets/header-box-image.jpg" alt="">
