--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,18 @@
                 <li><a class= 'underline' href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
+
+        <nav class = 'dropDownMenu'>
+            <input type="checkbox" id="menu">
+            <label for="menu" class="fas fa-bars"></label>
+            <ul class= menuContent>
+                <li><a  href="index.html">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="blogPost.html">BLOG</a></li>
+                <li><a class ='underline' href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
+
         <h1>GET IN TOUCH</h1>
         <div class= 'formBox'>
             <form class= 'container'>
