--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <nav class = 'dropDownMenu'>
             <input type="checkbox" id="menu">
-            <label for="menu" class="fas fa-bars"></label>
+            <label for="menu" aria-label= 'Menu' class="fas fa-bars"></label>
             <ul class= menuContent>
                 <li><a class ='underline' href="index.html">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
@@ -35,7 +35,7 @@
             </ul>
         </nav>
         <div class= 'imgContainerabs'>
-            <img src="assets/header-box-image.jpg" alt="">
+            <img src="assets/header-box-image.jpg" alt=" Picture of  the end of a black camera">
         </div>
         <h1 class = 'homeH1'>CAPTURED</h1>
     </header>
@@ -50,7 +50,7 @@
     
     <section class = 'skillSection container3'>
         <div class = 'imgContainer'>
-            <img class ='imgLeft' src="assets/left-image.jpg" alt="">
+            <img class ='imgLeft' src="assets/left-image.jpg" alt="Picture of a large camera in the middle of the air">
         </div>
         <div class = 'textContainer3'>
 
@@ -64,7 +64,7 @@
 
     <section class = 'gearSection container3 reverse'>
         <div class = 'imgContainer'>
-            <img class = 'imgRight' src="assets/right-image.jpg" alt="">
+            <img class = 'imgRight' src="assets/right-image.jpg" alt="Picture of a man holding a canon camera looking at presumably the photo he just took">
         </div>
         <div class = 'textContainer2'> 
             <h3>GETTING NEW GEAR</h3>
