more aria-labels

--- a/contact.html
+++ b/contact.html
@@ -52,10 +52,10 @@
     </header>
     <section class= contactInfo>
         <div class="iconContainer">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-whatsapp"></i>
+            <i aria-label='facebook' class="fab fa-facebook-f"></i>
+            <i aria-label= 'instagram' class="fab fa-instagram"></i>
+            <i aria-label = 'twitter' class="fab fa-twitter"></i>
+            <i aria-label = 'whatsapp' class="fab fa-whatsapp"></i>
         </div>
         <h4>INFO@EMAIL.COM</h4>
         <p>123-456-7890</p>
