more editing of scss

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     </section>
 
     <section class = 'iconSection'>
-        <div class="iconContainer container4">
+        <div class=" container4">
 
-            <div class = 'container6'>
+            <div class = 'containerFlexIcon'>
                 <div class="iconContainer">
 
                     <i aria-label="Camera icon" class="fas fa-camera icon1"></i>
@@ -86,7 +86,7 @@
                     <p>Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
                 </div>
             </div>
-            <div class = 'container6'>
+            <div class = 'containerFlexIcon'>
                 <div class="iconContainer">
 
                     <i aria-label="Community icon" class="fas fa-users icon2"></i>
@@ -96,7 +96,7 @@
                     <p>Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
                 </div>
             </div>
-            <div class = 'container6'>
+            <div class = 'containerFlexIcon'>
                 <div class="iconContainer">
 
                     <i aria-label="file icon" class="fas fa-file icon3"></i>
@@ -106,7 +106,7 @@
                     <p>Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
                 </div>
             </div>
-            <div class = 'container6'>
+            <div class = 'containerFlexIcon'>
                 <div class="iconContainer">
 
                     <i aria-label="telephone icon" class="fas fa-phone icon4"></i>
