more changes in SCSS and changed image names to fit snakeCase

--- a/blogPost.html
+++ b/blogPost.html
@@ -37,13 +37,13 @@
 
         <h1>BLOG</h1>
         <div class= 'imgContainerBlogAbs'>
-            <img src="assets/blog-post-image.jpg" alt="">
+            <img src="assets/blogPostImage.jpg" alt="">
         </div>
     </header>
     <section class ='blogSection'>
         <div class="sideColumn">
             <div class="imgContainer">
-                <img src="assets/side-blog-image.jpg" alt="Hand with a camera lens hovering on top with a scenery of a beach">
+                <img src="assets/sideBlogImage.jpg" alt="Hand with a camera lens hovering on top with a scenery of a beach">
             </div>
             <div class="textContainerSide">
                 <h3>ABOUT CAPTURED</h3>
@@ -78,7 +78,7 @@
             
             <div class="commentContainer">
                 <div class="imgContainer">
-                    <img src="assets/comment-1.jpg" alt="Face of a man wearing a hat">
+                    <img src="assets/comment1.jpg" alt="Face of a man wearing a hat">
                 </div>
                 <div class= 'textContainerComment'> 
                     <p>Tuesday October 9th, 2018 by Jeremy</p>          
@@ -91,7 +91,7 @@
         <div>  
             <div class="commentContainer">
                 <div class="imgContainer">
-                    <img src="assets/comment-2.jpg" alt="Face of a man wearing a hat">
+                    <img src="assets/comment2.jpg" alt="Face of a man wearing a hat">
                 </div>
                 <div class = 'textContainerComment'>           
                     <p>Wednesday October 10th, 2018 by Julia</p>
