--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                     <input type="email" name = 'email' placeholder = 'Email address' id='email'>
                 </div>
                 <label  class = 'sr-only' for="message">message</label>
-                <textarea placeholder="message" id ='message'></textarea>
+                <textarea placeholder="Message" id ='message'></textarea>
                 <button type='submit'>SUBMIT</button>
             </form>
     
