--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
         </nav>
         <div class= 'imgContainerabs'>
-            <img src="assets/header-box-image.jpg" alt=" Picture of  the end of a black camera">
+            <img src="assets/headerBoxImage.jpg" alt=" Picture of  the end of a black camera">
         </div>
         <h1 class = 'homeH1'>CAPTURED</h1>
     </header>
@@ -50,7 +50,7 @@
     
     <section class = 'skillSection container3'>
         <div class = 'imgContainer'>
-            <img class ='imgLeft' src="assets/left-image.jpg" alt="Picture of a large camera in the middle of the air">
+            <img class ='imgLeft' src="assets/leftImage.jpg" alt="Picture of a large camera in the middle of the air">
         </div>
         <div class = 'textContainer3'>
 
@@ -64,7 +64,7 @@
 
     <section class = 'gearSection container3 reverse'>
         <div class = 'imgContainer'>
-            <img class = 'imgRight' src="assets/right-image.jpg" alt="Picture of a man holding a canon camera looking at presumably the photo he just took">
+            <img class = 'imgRight' src="assets/rightImage.jpg" alt="Picture of a man holding a canon camera looking at presumably the photo he just took">
         </div>
         <div class = 'textContainer2'> 
             <h3>GETTING NEW GEAR</h3>
@@ -127,7 +127,7 @@
     <section class = 'profileSection '>
         <div class="container5">
             <div class = 'imgContainer'>
-                <img src ='assets/small-box.jpg' alt ='Picture of a man sitting on top of a rock holding a camera while gazing upon the mountain in front of him'>
+                <img src ='assets/smallBox.jpg' alt ='Picture of a man sitting on top of a rock holding a camera while gazing upon the mountain in front of him'>
             </div>
             <div class="textContainer">
     
@@ -142,13 +142,13 @@
     <section class = 'gallerySection'>
         <div class="grid">
             <div class="imgContainer">
-                <img src="assets/gallery-image-1.jpg" alt="Picture of the back of a camera showing a black screen">
+                <img src="assets/galleryImage1.jpg" alt="Picture of the back of a camera showing a black screen">
             </div>
             <div class="imgContainer">
-                <img src="assets/gallery-image-2.jpg" alt=" Picture of the front of a camera sitting in some plants">
+                <img src="assets/galleryImage2.jpg" alt=" Picture of the front of a camera sitting in some plants">
             </div>
             <div class="imgContainer image3">
-                <img src="assets/gallery-image-3.jpg" alt="Picture from a top angle of the front of a Nikon camera">
+                <img src="assets/galleryImage3.jpg" alt="Picture from a top angle of the front of a Nikon camera">
             </div>
         </div>
     </section>
