more last minute changes in SCSS

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <section class= 'capturedSection'>
         <div class = ' textContainer container2'>
-            <h2>WHAT IS CAPTURED</h2>
+            <h2>WHAT IS CAPTURED?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculus at, consectetur vel turpis. Vestibulum ultricies, felis in lacinia porttitor, tortor metus convallis augue, at fermentum diam erat nec quam. Nulla facilisi. </p>
             <button>FIND OUT MORE</button>
         </div>
