--- a/blogPost.html
+++ b/blogPost.html
@@ -18,8 +18,8 @@
         <nav>
             <ul class= 'navContainer'>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a class= 'underline'  href="blogPost.html">BLOG</a></li>
+                <li><a  class= 'underline' href="#">ABOUT</a></li>
+                <li><a href="blogPost.html">BLOG</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
