--- a/blogPost.html
+++ b/blogPost.html
@@ -100,6 +100,9 @@
             </div>         
         </div>
 
+        
+    </section>
+    <section class = formSection>
         <div class ='formBoxBlog'>
             <form class= 'container'>
                 <div class="formContainer">
@@ -112,9 +115,12 @@
                 <textarea placeholder="Comment" id ='message'></textarea>
                 <button type='submit'>POST COMMENT</button>
             </form>
+        </div>
     </section>
     <footer>
         <p>Copyright © 2018 HackerYou</p>
     </footer>
+
+    <script src= 'index.js'></script>
 </body>
 </html>
